sample-sg-cfn.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation Template to create Security Groups.


Resources:
  bastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Bastion host
      VpcId:
        Fn::ImportValue: sampleVPCstack-VPCId 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
          - Key: Name
            Value: bastionSG
          - Key: Environment
            Value: PROD

  albSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for ALB
      VpcId:
        Fn::ImportValue: sampleVPCstack-VPCId 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0  
      Tags:
          - Key: Name
            Value: albSG
          - Key: Environment
            Value: PROD

  webSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for WebApp
      VpcId:
        Fn::ImportValue: sampleVPCstack-VPCId 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref albSG 
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref albSG
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref bastionSG  
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
          - Key: Name
            Value: webSG
          - Key: Environment
            Value: PROD
  albegressHTTP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref albSG
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      DestinationSecurityGroupId: !Ref webSG

  albEgressHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref albSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref webSG
